# feirafacil

./: .gitignore  README.md  feiracacil-dml.sql  feirafacil-create.sql  feirafacil-dump.backup  feirafacil-libreoffice.odb  feirafacil-tabelas.xlsx  feirafacildb-create.sql  feirafacildb-dump-2023-01-30.backup  feirafacildb-dump-2023-01-31.backup  feirafacildb-dump-2023-02-02.backup  feirafacildb-dump.backup
feirafacil-scripts/: .gitignore  LICENSE  README.md  conexao.ini  config.py  feirafacil_scripts.py  funcoes.py  pyproject.toml
